--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "md5": "^2.3.0"
+    "fs": "0.0.1-security",
+    "md5": "^2.3.0",
+    "readline": "^1.3.0"
   }
 }
